--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,7 +5,7 @@
                                    android:layout_margin="8dp"
                                    android:foreground="?android:attr/selectableItemBackground">
 
-    <LinearLayouts
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -69,7 +69,8 @@
                         android:id="@+id/itemCommentCounter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
+
             </LinearLayout>
         </LinearLayout>
-    </LinearLayouts>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
